--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.3.70'
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -15,8 +15,8 @@ allprojects {
     repositories {
         maven{ url 'https://maven.aliyun.com/repository/jcenter'}
         maven{ url 'https://maven.aliyun.com/repository/google'}
-        google()
-        jcenter()
+//        google()
+//        jcenter()
     }
 }
 
