--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,18 +14,21 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   # 网络请求
   dio: ^3.0.9
+  # shared preference
+  shared_preferences: ^0.5.10
+
   # Toast提示
   fluttertoast: ^3.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
